--- a/reducer-todo/src/index.css
+++ b/reducer-todo/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.added-items {
+  font-size: 2rem;
+}
